<resources>
    <string name="app_name">D\'Urgence</string>

    <!--Component-->
    <string name="inputName">Masukkan nama kamu</string>
    <string name="inputNumber">Masukkan nomor kamu</string>

    <!--Button-->
    <string name="next">LANJUTKAN</string>
    <string name="verification">VERIFIKASI</string>
    <string name="verification_hint">Silakan masukkan 6 digit kode OTP yang dikirim ke nomor ponselmu</string>
    <string name="otpInputHint">Kode OTP…</string>

    <!--Fragment-->
    <string name="menu_profile">PROFILE</string>
    <string name="menu_aid">FIRST AID</string>
    <string name="menu_home">HOME</string>

    <!--Text-->
    <string name="info">D\'urgence Emergency Call adalah aplikasi yang dapat membantu masyarakat yang sedang berada dalam kondisi darurat. Dengan mengirimkan kode SOS pada masing-masing smartphone maka bantuan kami akan segera datang.</string>
    <string name="textAnyHelp">Apa yang dapat kami bantu?</string>
    <string name="textGoodDay">Halo, Andre,\nSelamat siang!</string>
    <string name="tv_aidTitle">PERTOLONGAN PERTAMA</string>
    <string name="menu_about">About app</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_logout">Logout</string>

    <!--Service Name (Indonesian)-->
    <string-array name="serviceName_indo">
        <item>Rumah Sakit</item>
        <item>Polisi</item>
        <item>Pemadam Kebakaran</item>
    </string-array>

    <!--Service Name (English)-->
    <string-array name="serviceName_eng">
        <item>Hospital</item>
        <item>Police</item>
        <item>Fire Station</item>
    </string-array>

    <!--Service Thumbnail-->
    <string-array name="serviceThumb">
        <item>@drawable/ic_hospital</item>
        <item>@drawable/ic_police</item>
        <item>@drawable/ic_fire_station</item>
    </string-array>

    <!--Aid Thumbnail-->
    <string-array name="aidThumb">
        <item>@drawable/ic_toothache</item>
        <item>@drawable/ic_fainted</item>
        <item>@drawable/ic_injury</item>
        <item>@drawable/ic_fever</item>
        <item>@drawable/ic_nosebleed</item>
        <item>@drawable/ic_flu</item>
    </string-array>

    <!--Aid Name (Indonesian)-->
    <string-array name="aidName">
        <item>Sakit Gigi</item>
        <item>Pingsan</item>
        <item>Luka</item>
        <item>Demam</item>
        <item>Mimisan</item>
        <item>Flu</item>
    </string-array>
</resources>