<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:layout_margin="8dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="240dp"
    app:cardBackgroundColor="@color/colorBase2"
    app:cardCornerRadius="24dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context="com.merpati.durgence.views.dialog.BottomSheetFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp">

        <TextView
            android:id="@+id/tv_title_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <TextView
            android:id="@+id/tv_verif_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_verification"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/verification_hint"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editUserOTP"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/tv_verif_hint"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/otpInputHint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_verification"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_below="@id/editUserOTP"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorHint"
            android:layout_marginEnd="24dp"
            android:text="@string/verification" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>